--- a/src/server_manager/ui_components/style.css
+++ b/src/server_manager/ui_components/style.css
@@ -26,6 +26,13 @@ paper-dropdown {
   box-shadow: 0px 0px 20px #999999;
 }
 
+/* Show gray background when a dialog is opened */
+core-overlay-layer.core-opened {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+}
+
 html,
 body {
   height: 100%;
@@ -39,6 +46,7 @@ body {
   font-size: 14px;
   font-weight: 400;
   color: rgba(0, 0, 0, 0.54);
+  -webkit-font-smoothing: antialiased;
 }
 
 div#wrapper {
